# rust-kdd

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: app_error.rs  main.rs  utils.rs  yutils.rs
src/_test/: kdd_loader.rs  kdd_version.rs  test_utils.rs
src/cmd/: argc.rs  mod.rs
src/kdd/: block.rs  build.rs  builder.rs  docker.rs  error.rs  exec.rs  kctl.rs  kevents.rs  kexec.rs  klog.rs  ktemplate.rs  kube.rs  loader.rs  mod.rs  provider.rs  realm.rs  version.rs
src/utils/: jsons.rs  mod.rs  yamls.rs
test-data/app-1/: kdd.yaml  package.json
test-data/app-1/frontends/web/: test-version.ts
test-data/app-1/prod/: kdd-prod.yaml
test-data/app-1/prod/k8s-prod/: _conf.yaml
test-data/app-1/services/agent/: test-version.ts
test-data/app-1/services/web-server/: index.html
