[package]
name = "kdd"
version = "0.1.0"
authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
edition = "2018"

include = [
	"src/**/*",
	"Cargo.toml",
	"README.md",
	"LICENCE"
]
homepage = "https://github.com/jeremychone/rust-kdd"

description = "A command-line utility to streamline Kubernetes-driven development and deployment."
repository = "https://github.com/jeremychone/rust-kdd"
keywords = [
	"cli",
	"kubernetes",
	"docker",
	"aws",
	"gcp"
]
categories = ["command-line-interface"]
license = "MIT"


[dependencies]
tokio = { version = "1.6", features = ["full"] }
regex = "1"
yaml-rust = "0.4"
indexmap = "1.6"
serde_json = "1.0"
clap = "2"
thiserror = "1"
handlebars = "4"
walkdir = "2"
pathdiff = "0.2"
rhai = "1"
strum = "0.21"
strum_macros = "0.21"
