[package]
name = "kdd"
version = "0.1.5"
authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
edition = "2021"
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md",
	"LICENCE"
]
homepage = "https://github.com/jeremychone/rust-kdd"
description = "A command-line utility to streamline Kubernetes-driven development and deployment."
repository = "https://github.com/jeremychone/rust-kdd"
keywords = [
	"cli",
	"kubernetes",
	"docker",
	"aws",
	"gcp"
]
categories = ["command-line-interface"]
license = "MIT"


[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
regex = "1"
yaml-rust = "0.4"
indexmap = "1"
serde_json = "1"
clap =  {version = "3", features = ["cargo"]}
thiserror = "1"
handlebars = "4"
# walkdir = "2"
pathdiff = "0.2"
strum = "0.23"
strum_macros = "0.23"
